[package]
name = "puccin"
version = "0.0.2"
authors = ["David Northover"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0.82"
features = ["derive"]

[dependencies]
phylo = { path = "../phylo" }
regex = "1"
serde_derive = "1.0.82"
serde_json = "1.0"
serde_yaml = "0.8"
indexmap = "1.0.2"
clap = { version = "2.33", features = ["yaml"] }

[build-dependencies]
clap = { version = "2.33", features = ["yaml"] }
